# falcon

./: .gitignore  Cargo.toml  README.md  base-img-setup.sh  get-netstack.sh  get-ovmf.sh  get-propolis.sh  import-raw-img.sh  libzfs_core.pc  rust-toolchain.toml  setup-base-images.sh
.cargo/: config.toml
.github/buildomat/jobs/: build-and-test.sh
examples/duo/: Cargo.toml
examples/duo-unit/: Cargo.toml
examples/duo-unit/src/: lib.rs
examples/duo/src/: main.rs
examples/helios-dev/: Cargo.toml  README.md
examples/helios-dev/cargo-bay/: README.md
examples/helios-dev/src/: main.rs
examples/softnpu/: .gitignore  Cargo.toml  softnpu
examples/softnpu/cargo-bay/: .gitignore  01-opte-init.sh  cello-init.sh  ddmd-launch-scrimlet.sh  ddmd-launch-sled.sh  dpd-configure.sh  gateway-init.sh  piano-init.sh  router-clear.sh  router-configure.sh  router-init.sh  violin-init.sh
examples/softnpu/cargo-bay/cello/: 01-zone-network.sh  02-launch-zone1.sh  03-overlay.sh  zone1.txt
examples/softnpu/cargo-bay/cello/scripts/: netup.sh
examples/softnpu/cargo-bay/piano/: 01-zone-network.sh  02-launch-zone1.sh  03-overlay.sh  zone1.txt
examples/softnpu/cargo-bay/piano/scripts/: netup.sh
examples/softnpu/cargo-bay/violin/: 01-zone-network.sh  02-launch-zone1.sh  03-overlay.sh  zone1.txt
examples/softnpu/cargo-bay/violin/scripts/: netup.sh
examples/softnpu/duo/: Cargo.toml
examples/softnpu/scripts/: dtrace-list-probes.sh  softnpu-monitor.d
examples/softnpu/src/: main.rs
examples/solo/: Cargo.toml
examples/solo/src/: main.rs
falco/: Cargo.toml
falco/src/: lib.rs
lib/: Cargo.toml  build.rs  build.rs.old  wrapper.h  wrapper.h.old
lib/src/: cli.rs  dladm.rs  error.rs  illumos.rs  lib.rs  ovmf.rs  propolis.rs  serial.rs  test.rs  unit.rs  util.rs  zones.rs
loopback-ip-mgr/: Cargo.toml
loopback-ip-mgr/src/: lib.rs
ztest/: Cargo.toml
ztest/src/: lib.rs
