[workspace]
resolver = "2"

default-members = [
    "lib",
    "ztest",
]

members = [
    "lib",
    "ztest",
    "examples/solo",
    "examples/duo",
    "examples/duo-unit",
    "examples/helios-dev",
]

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
zone = "0.3.0"
regex = "1.5"
smf = "0.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
uuid = { version = "1.18.1", features = [ "serde", "v4" ] }
serde = "1.0"
ron = "0.11"
slog = { version = "2.7", features = ["max_level_trace"] }
slog-term = "2.7"
slog-async = "2.7"
slog-envlogger = "2.2"
toml = "0.9"
propolis-client = { git = "https://github.com/oxidecomputer/propolis", rev = "8e9252917993e36d43dce96b4409ef151b7d4442" }
libc = "0.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
clap = { version = "4.5.50", features = ["color", "derive"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "3"
rand = "0.8"
camino = { version = "1.2.1", features = ["serde1"] }
reqwest = { version = "0.12.24", default-features = false }
oxnet = { version = "0.1.3", default-features = false }
indicatif = "0.18.0"
xz2 = "0.1.7"
camino-tempfile = "1.4.1"
cargo_toml = "0.22.3"
quote = "1.0.40"
prettyplease = "0.2"
syn = "2.0"
sha2 = "0.10.9"
anstyle = "1.0.11"
base16ct = { version = "0.3.0", features = ["alloc"] }
