[workspace]
resolver = "2"

default-members = [
    "lib",
    "ztest",
]

members = [
    "lib",
    "ztest",
    "examples/solo",
    "examples/duo",
    "examples/duo-unit",
    "examples/helios-dev",
]

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
zone = "0.3.1"
regex = "1.12"
smf = "0.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
uuid = { version = "1.22.0", features = [ "serde", "v4" ] }
serde = "1.0"
ron = "0.12"
slog = { version = "2.8", features = ["max_level_trace"] }
slog-term = "2.9"
slog-async = "2.8"
slog-envlogger = "2.2"
toml = "0.9"
propolis-client = { git = "https://github.com/oxidecomputer/propolis", rev = "36f20be9bb4c3b362029237f5feb6377c982395f" }
libc = "0.2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
clap = { version = "4.6.0", features = ["color", "derive"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "3"
rand = "0.10"
camino = { version = "1.2.2", features = ["serde1"] }
reqwest = { version = "0.13.3", default-features = false }
oxnet = { version = "0.1.4", default-features = false }
indicatif = "0.18.4"
xz2 = "0.1.7"
camino-tempfile = "1.4.1"
cargo_toml = "0.22.3"
quote = "1.0.45"
prettyplease = "0.2"
syn = "2.0"
sha2 = "0.10.9"
anstyle = "1.0.14"
base16ct = { version = "1.0.0", features = ["alloc"] }
