[package]
name = "libfalcon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
zone.workspace = true
regex.workspace = true
smf.workspace = true
libnet.workspace = true
fs2.workspace = true
uuid.workspace = true
serde.workspace = true
ron.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
home.workspace = true
propolis-client.workspace = true
propolis-server-config.workspace = true
toml.workspace = true
libc.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
clap.workspace = true
tabwriter.workspace = true
colored.workspace = true
rand.workspace = true
portpicker.workspace = true
camino.workspace = true
