[package]
name = "libfalcon"
version = "0.1.0"
edition = "2018"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
zone.workspace = true
regex.workspace = true
smf.workspace = true
libnet.workspace = true
uuid.workspace = true
serde.workspace = true
ron.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
propolis-client.workspace = true
toml.workspace = true
libc.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
clap.workspace = true
tabwriter.workspace = true
colored.workspace = true
rand.workspace = true
camino.workspace = true
reqwest.workspace = true
indicatif.workspace = true
xz2.workspace = true
anstyle.workspace = true
sha2.workspace = true
base16ct.workspace = true
oxnet.workspace = true

[dev-dependencies]
camino-tempfile.workspace = true

[build-dependencies]
cargo_toml.workspace = true
quote.workspace = true
prettyplease.workspace = true
syn.workspace = true
